1999-06-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* FArguments.m (ALLOCTYPE): New macro.
	([FArguments_c -_addArgument_:ofType:], ADD_PRIMITIVE): Use it.

1999-06-29  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* directory.m (java_ensure_class): If corresponding objc class
	is not found create a JavaProxy object and insert it into the
	directory. 
	
	* directory.h: Declare jclass variables that store primitive
	Java types classes as extern.

	* JavaProxy.h ([-isJavaProxy]): New method used as indicator that
	object is a Java Proxy.
	
	* JavaProxy.m ([JavaProxy -isJavaProxy]): Likewise.

1999-06-29  Alex Lancaster  <alex@santafe.edu>

	* Archiver.[hm] ([Archiver_c +createBegin:]): Initialize
	variables.
	([Archiver_c +create:setPath:]): Set path variable.

	* HDF5Archiver.m ([HDF5Archiver_c +createBegin:]): Don't init
	variables here, call super class.
	([HDF5Archiver_c +create:setPath:]): Likewise.

	* LispArchiver.m ([LispArchiver_c +createBegin:]): Likewise.
	([LispArchiver_c +create:setPath:]): Likewise.

1999-06-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* modulemap.el (generate-module-map): Add "Phase" as a non-module
	protocol.  Include <stddef.h> in output for NULL.

	* directory.m (java_class_for_typename): Handle empty module name.
	(get_class_name_from_class_object): New function.
	(get_class_name): Use it.
	(get_class_name_from_object): New function.
	(get_base_class_name): Disable.
	(create_signature): Now takes jclass as an argument.
	(create_signature_from_object): Replaces functionality of
	create_signature.
	(java_directory_init): Use it.
	(java_ensure_selector): Insert zeros for frame info.  They
	are needed for the Objective runtime type-parsing functions
	to work, but the values are unimportant since mframe will figure
	it out. 

	* directory.h (JNEXTPHASE): New macro.

	* directory.[hm] (java_next_phase): New function.
	(java_instantiate_using): Remove (replaced by java_next_phase).
